--- a/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.scss
@@ -1,11 +1,11 @@
 :host {
     kt-portlet-body {
-		height: 69vh;
+		height: 72vh;
         overflow-y: auto;
 	}
     .table-div {
         width: 600px !important;
-        margin: 50px auto;
+        margin: 50px auto 20px auto;
         border-radius: 1em;
         overflow: hidden;
         // border: 1px solid #e3e3e3;
