--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/kyc-details/kyc-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/kyc-details/kyc-details.component.html
@@ -1,71 +1,187 @@
 <form action="" [formGroup]="kycForm">
-    <div class="row justify-content-center">
-        <div class="col-6">
+    <div class="row">
+        <div class="col-6 kt-margin-t-20">
             <div class="row">
-                <div class="col-4 form-label">
-                    <label class="text-color kt-padding-l-10">Aadhaar Number</label>
+                <div class="col-3 offset-1 p-0">
+                    <label class="  font-weight-500 text-color">Identity</label>
                 </div>
-                <div class="col-6">
-                    <input type="text" class="form-control" placeholder="1023 4501 2032 1214" numbersOnly
-                        formControlName="aadharNumber" maxlength="12"
-                        [class.isError]="controls.aadharNumber.touched && controls.aadharNumber.invalid">
-                    <mat-error *ngIf="controls.aadharNumber.touched && controls.aadharNumber.invalid">
-                        <span *ngIf="controls.aadharNumber.errors?.required">Field is Required</span>
-                        <span *ngIf="controls.aadharNumber.errors?.minlength">Length Should be 12</span>
-                    </mat-error>
+                <div class="col-7">
+                    <input type="text" class="form-control" formControlName="identityTypeId">
                 </div>
             </div>
-            <div class="row kt-margin-t-15">
-                <div class="col-4 form-label">
-                    <label class="text-color kt-padding-l-10">Permanent Address</label>
-                </div>
-                <div class="col-6">
-                    <textarea cols="5" rows="3" placeholder="Write Your Permanent Address..." class="form-control"
-                        formControlName="permanentAddress"
-                        [class.isError]="controls.permanentAddress.touched && controls.permanentAddress.invalid"></textarea>
-                    <mat-error *ngIf="controls.permanentAddress.touched && controls.permanentAddress.invalid">
-                        Field is Required
-                    </mat-error>
-                </div>
-            </div>
+        </div>
 
-            <div class="row kt-margin-t-15">
-                <div class="col-4 form-label">
-                    <label class="text-color kt-padding-l-10">Pincode</label>
+        <div class="col-6 kt-margin-t-20">
+            <div class="row">
+                <div class="col-3 offset-1 p-0">
+                    <label class=" font-weight-500 text-color">Unique Identity No.</label>
                 </div>
-                <div class="col-6">
-                    <input type="text" class="form-control" placeholder="432134" numbersOnly maxlength="6"
-                        formControlName="pincode"
-                        [class.isError]="controls.pincode.touched && controls.pincode.invalid">
-                    <mat-error *ngIf="controls.pincode.touched && controls.pincode.invalid">
-                        <span *ngIf="controls.pincode.errors?.required">Field is Required</span>
-                        <span *ngIf="controls.pincode.errors?.minlength">Length Should be 6</span>
-                    </mat-error>
-                </div>
-            </div>
-            <div class="row kt-margin-t-15">
-                <div class="col-4 form-label">
-                    <label class="text-color kt-padding-l-10">Office Address</label>
-                </div>
-                <div class="col-6">
-                    <textarea cols="5" rows="3" placeholder="Write Your Office Address..."
-                        formControlName="officeAddress" class="form-control"
-                        [class.isError]="controls.officeAddress.touched && controls.officeAddress.invalid"></textarea>
-                    <mat-error *ngIf="controls.officeAddress.touched && controls.officeAddress.invalid">
-                        Field is Required
-                    </mat-error>
-                </div>
-            </div>
-            <div class="row kt-margin-t-15">
-                <div class="col-4 form-label">
-                    <label class="text-color kt-padding-l-10">Pincode</label>
-                </div>
-                <div class="col-6">
-                    <input type="text" class="form-control" placeholder="432134">
+                <div class="col-7">
+                    <input formControlName="identityProofNumber" type="text" aria-label="Pin Code"
+                        placeholder="Unique Identity Number" class="form-control" s>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="row kt-margin-t-20 kt-margin-b-20">
+        <div class="offset-2 col">
+            <div class="img-container">
+                <img class="placeholder-image" src="../../../../../../assets/media/icons/image-placeholder.png"
+                    alt="placeholder">
+            </div>
+            <!-- <div *ngIf="images.identityProof.length>0">
+                    <div class="row ">
+                        <div class="kt-margin-r-15" *ngFor="let img of images.identityProof, index as idx">
+                            <div class="img-container">
+                                <img class="border-rad-15 fetched-image" [src]="img" alt="">
+                                <img src="../../../../../assets/media/icons/cancel.svg" alt=""
+                                    class="kt-pointer remove-icon"
+                                    (click)="removeImages(idx, 'identityProof');">
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+        </div>
+    </div>
 
+    <div class="row">
+        <ng-container formArrayName="address"
+            *ngFor="let addressForm of kycForm.get('address')['controls']; index as i;">
+
+            <div [formGroupName]="i" class="col-6">
+
+
+                <div class=" kt-margin-t-20">
+                    <div class="row">
+                        <div class="col-3 offset-1 p-0">
+                            <label class="  font-weight-500 text-color" *ngIf="i == 1">Residential
+                                or
+                                Official
+                                Address</label>
+                            <label class="  font-weight-500 text-color" *ngIf="i == 0"> Permanent
+                                Address</label>
+                        </div>
+                        <div class="col-7">
+                            <textarea formControlName="address" type="text" rows="5" aria-label="Residential Address"
+                                placeholder="Enter your text" class="form-control"></textarea>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <input *ngIf="i==1" value="residential" formControlName="addressType" type="hidden">
+                    <input *ngIf="i==0" value="permanent" formControlName="addressType" type="hidden">
+                </div>
+                <div>
+                    <div class=" kt-margin-t-20">
+                        <div class="row">
+                            <div class="col-3 offset-1 p-0">
+                                <label class="  font-weight-500 text-color">State
+                                </label>
+                            </div>
+                            <div class="col-7">
+                                <input type="text" formControlName="stateId" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class=" kt-margin-t-20">
+                            <div class="row">
+                                <div class="col-3 offset-1 p-0">
+                                    <label class="  font-weight-500 text-color">City
+                                    </label>
+                                </div>
+                                <div class="col-7">
+                                    <input type="text" formControlName="cityId" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+
+                        <div class=" kt-margin-t-20">
+                            <div class="row">
+                                <div class="col-3 offset-1 p-0">
+                                    <label class="  font-weight-500 text-color">Pin Code</label>
+                                </div>
+                                <div class="col-7">
+                                    <input formControlName="pinCode" type="text" aria-label="Pin Code"
+                                        placeholder="000000" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class=" kt-margin-t-20">
+                        <div class="row">
+                            <div class="col-3 offset-1 p-0">
+                                <label class="  font-weight-500 text-color">Address Proof
+                                </label>
+                            </div>
+                            <div class="col-7">
+                                <input type="text" formControlName="addressProofTypeId" class="form-control">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="kt-margin-t-20">
+                        <div class="row">
+                            <div class="col-3 offset-1 p-0">
+                                <label class=" font-weight-500 text-color">Unique Identity
+                                    No.</label>
+                            </div>
+                            <div class="col-7">
+                                <input formControlName="addressProofNumber" type="text"
+                                    placeholder="Unique Identity Number" class="form-control">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class=" kt-margin-t-20 kt-margin-b-20">
+                        <div class="row">
+                            <div class="col">
+                                <div class="offset-4 img-container">
+                                    <img class="placeholder-image"
+                                        src="../../../../../../assets/media/icons/image-placeholder.png"
+                                        alt="placeholder">
+                                </div>
+
+                                <!-- <div *ngIf="i==0 && images.residential.length > 0">
+                                        <div class="row">
+                                            <div class="col-6"
+                                                *ngFor="let img of images.residential, index as idx">
+                                                <div class="img-container">
+                                                    <img class="fetched-image" [src]="img" alt="">
+                                                    <img src="../../../../../assets/media/icons/cancel.svg"
+                                                        alt="" class="kt-pointer remove-icon"
+                                                        (click)="removeImages(idx, 'residential');">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div> -->
+
+                                <!-- <div *ngIf="i==1 && images.permanent.length > 0">
+                                        <div class="row">
+                                            <div class="col-6"
+                                                *ngFor="let img of images.permanent, index as idx">
+                                                <div class="img-container">
+                                                    <img class="fetched-image" [src]="img" alt="">
+                                                    <img src="../../../../../assets/media/icons/cancel.svg"
+                                                        alt="" class="kt-pointer remove-icon"
+                                                        (click)="removeImages(idx, 'permanent');">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </ng-container>
+
+    </div>
 </form>
