--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -46,7 +46,7 @@
                          class="my-auto text-primary text-center kt-padding-l-15"(click)="preview(ornament.controls.withOrnamentWeight.value,idx)">View
                             Image</label>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 text-right">
                         <input type="file" #withOrnamentWeight class="d-none"
                             (change)="uploadFile(idx,$event,'withOrnamentWeight')">
                         <kt-button *ngIf="!ornament.controls.withOrnamentWeight.value" [type]="'button'"
@@ -66,7 +66,7 @@
                         <label *ngIf="ornament.controls.acidTest.value" class="my-auto text-primary text-center kt-padding-l-15"
                         (click)="preview(ornament.controls.acidTest.value,idx)">View Image</label>
                     </div>
-                    <div class="col-4 ">
+                    <div class="col-4 text-right">
                         <input type="file" #acidTest class="d-none" (change)="uploadFile(idx,$event,'acidTest')">
                         <kt-button *ngIf="!ornament.controls.acidTest.value" [type]="'button'" [value]="'Attach'"
                             (click)="acidTest.click()"></kt-button>
@@ -77,13 +77,27 @@
                         </div>
                     </div>
                 </div>
+                <div class="row kt-margin-t-10">
+                    <div class="col-4 form-label">
+                        <label for="" class="text-color">Karat</label>
+                    </div>
+                    <div class="col-8">
+                        <select class="form-control" formControlName="karat" (change)="selectKarat(idx)">
+                            <option value="" [disabled]="true" [selected]="true">Select Karat</option>
+                            <option [value]="karat.value" *ngFor="let karat of karatArr">{{karat.name}}</option>
+                        </select>
+                    </div>
+                </div>
                 <div class="row kt-margin-t-15">
                     <div class="col-4 form-label">
                         <label class="my-auto text-color ">LTV%</label>
                     </div>
                     <div class="col-8">
-                        <input type="text" class="form-control" placeholder="54.10%" formControlName="ltvPercent"
-                            [class.isError]="ornament.controls.ltvPercent.touched && ornament.controls.ltvPercent.invalid">
+                        <select class="form-control" formControlName="ltvPercent" 
+                        [class.isError]="ornament.controls.ltvPercent.touched && ornament.controls.ltvPercent.invalid">
+                            <option value="" [disabled]="true" [selected]="true">Select Purity</option>
+                            <option *ngFor="let pure of ltvPercent;index as i">{{pure}} %</option>
+                        </select>                            
                         <mat-error *ngIf="ornament.controls.ltvPercent.touched && ornament.controls.ltvPercent.invalid">
                             <span *ngIf="ornament.controls.ltvPercent.errors?.pattern">Enter a valid Number</span>
                         </mat-error>
@@ -119,7 +133,7 @@
                         <label *ngIf="ornament.controls.weightMachineZeroWeight.value" class="my-auto text-primary text-center kt-padding-l-15"
                         (click)="preview(ornament.controls.weightMachineZeroWeight.value,idx)">View Image</label>
                     </div>
-                    <div class="col-4 ">
+                    <div class="col-4 text-right">
                         <input type="file" #vm class="d-none" (change)="uploadFile(idx,$event,'vm')">
                         <kt-button *ngIf="!ornament.controls.weightMachineZeroWeight.value" [type]="'button'"
                             [value]="'Attach'" (click)="vm.click()"></kt-button>
@@ -139,7 +153,7 @@
                         <label *ngIf="ornament.controls.stoneTouch.value" class="my-auto text-primary text-center kt-padding-l-15"
                         (click)="preview(ornament.controls.stoneTouch.value,idx)">View Image</label>
                     </div>
-                    <div class="col-4 ">
+                    <div class="col-4 text-right">
                         <input type="file" #stoneTouch class="d-none" (change)="uploadFile(idx,$event,'stoneTouch')">
                         <kt-button *ngIf="!ornament.controls.stoneTouch.value" [type]="'button'" [value]="'Attach'"
                             (click)="stoneTouch.click()"></kt-button>
@@ -155,18 +169,26 @@
                         <label class="my-auto text-color ">Purity Test</label>
                     </div>
                     <div class="col-4 form-label">
-                        <label *ngIf="ornament.controls.purityTest.value" class="my-auto text-primary text-center kt-padding-l-15"
+                        <label *ngIf="ornament.controls.purityTest.value.length > 0" class="my-auto text-primary text-center kt-padding-l-15"
                         (click)="preview(ornament.controls.purityTest.value,idx)">View Image</label>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 text-right">
                         <input type="file" #purity class="d-none" (change)="uploadFile(idx,$event,'purity')">
-                        <kt-button *ngIf="!ornament.controls.purityTest.value" [type]="'button'" [value]="'Attach'"
+                        <kt-button *ngIf="ornament.controls.purityTest.value.length == 0" [type]="'button'" [value]="'Attach'"
                             (click)="purity.click()"></kt-button>
                         <div class="form-label">
-                            <label *ngIf="ornament.controls.purityTest.value"
+                            <label *ngIf="ornament.controls.purityTest.value.length > 0"
                                 class="my-auto text-danger text-center kt-padding-l-15 kt-pointer"
                                 (click)="removeImage('purity',idx,ornament.controls.purityTest.value)">Remove</label>
                         </div>
+                    </div>
+                </div>
+                <div class="row kt-margin-t-10">
+                    <div class="col-4 form-label">
+                        <label for="" class="text-color">Purity</label>
+                    </div>
+                    <div class="col-8">
+                        <input type="number" class="form-control" formControlName="purity" placeholder="00%" [readonly]='true'>
                     </div>
                 </div>
                 <div class="row kt-margin-t-15">
